app/assets/stylesheets/searches.scss
/***** General styles *****/
body {
  font-family: Arial, Verdana;
}

a, a:visited, a:hover, a:focus {
  text-decoration: none;
  color: #3e1c52;
  background-color: transparent;
  font-weight: bold;
}

a:hover {
  text-decoration: underline;
}

ul {
  margin-bottom: 0px;
}

.alert-danger, .alert-info {
  margin-top: 10px;
  width: 100%;
}
/***** End of general styles *****/

/***** Home page browse icons *****/
#browse_icons table {
  width: 100%;
  //margin-top: 20px;
}

#browse_icons td {
  width: 20%;
  padding-top: 10px;
  text-align: center;
}

.fa {
  color: #403152;
}

.fa:hover {
  color: #685185;
  // ja added
  text-decoration: none;
}
/***** End of home page browse icons *****/


/***** Top menu *****/
#top_menu {
  min-height: 50px;
  background-color: #403152;
  //text-align: center;
  font-size: 1.2em;
  //padding-top: 10px;
}

#top_menu a {
  color: #FFCC00;
  //margin-left: 15px;
  //margin-right: 15px;
}

#top_menu #contact {
  text-align: right;
}
/***** End of top menu *****/

/***** Search row *****/
#search_row_home {
  height: 350px;
  background: url('/assets/arch_banner_home.jpg') no-repeat;
  background-size: cover;
  background-position: center top;
}

#search_row_default {
  height: 110px;
  background: url('/assets/arch_banner_default.jpg') no-repeat;
  background-size: cover;
  background-position: center bottom;
}

#search_box {
  width: 88%;
  border-color: black;
  margin-right: 2%;
  border-radius: 4px;
}

.go_button {
  background-color: #FFCC00;
  border-color: black;
  color: black;
  //margin-left: 10px;
  width: 10%;
  min-width: 40px;
}

.go_text {
  text-align: center;
}
/***** End of search row *****/

/***** Footer *****/
#footer {

}

.footer_logo {
  padding: 5px 5px 5px 5px;
  width: 100%;
}

/***** End of footer *****/


/***** Facets (need to sort styles out!) *****/
#sidebar, #facets {
  padding-bottom: 10px;
}

#facet-panel-collapse {
  padding-left: 0;
  padding-right: 0;
  border-top: none;
  box-shadow: none;
  max-height: none;
}

.facets-toggle {
  border-color: #ddd;
}

.facets-toggle .icon-bar {
  background-color: #888;
}

.facet-values {
  display: table;
  width: 100%;
}

.facet-values li {
  display: table-row;
}

.facet-values .remove {
  text-indent: 12px;
}

.facet-values .remove .glyphicon {
  top: 0.1em;
  vertical-align: text-top;
}

.facet-values .remove:hover {
  color: #d9534f;
}

.facet-values .facet-label {
  display: table-cell;
  padding-right: 1em;
  text-indent: -15px;
  padding-left: 15px;
  padding-bottom: 6px;
  -ms-word-break: break-all;
  word-break: break-all;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

.facet-values .facet-count {
  display: table-cell;
  vertical-align: top;
  text-align: right;
}

.facet_extended_list .sort_options {
  text-align: right;
}

.facet_extended_list .prev_next_links {
  float: left;
}

/* deprecated in Blacklight 5.x */
.collapse-toggle {
  cursor: pointer;
}

.panel-heading.collapse-toggle .panel-title:after {
  /* symbol for "opening" panels */
  font-family: 'Glyphicons Halflings';
  /* essential for enabling glyphicon */
  content: "\e114";
  /* adjust as needed, taken from bootstrap.css */
  float: right;
  /* adjust as needed */
  color: grey;
  /* adjust as needed */
  font-size: 0.8em;
  line-height: normal;
}

.panel-heading.collapse-toggle.collapsed .panel-title:after {
  /* symbol for "collapsed" panels */
  content: "\e080";
  /* adjust as needed, taken from bootstrap.css */
}

.panel-title a {
  font-weight: bold;
  color: #666;
}

.panel-title {
  font-size: 14px;
}

.panel {
  margin-top: 10px!important;
}
/***** End of facets *****/

/***** Search results page *****/
#search_results {
  padding-top: 16px;
  padding-left: 70px;
  font-size: 1em;
}

.results_title {
  font-size: 1.2em;
}

.results_table table {
  margin-left: 18px;
  font-size: 1em;
}

.results_table th {
  font-weight: normal;
  width: 220px;
  padding-left: 11px;
}

.highlight_text {
  color: black;
  background-color: #FFCC00;
  font: message-box
}

.pager {
  margin: 0px;
}

.highlight_red a {
  color: red;
}

.highlight_facet {
  background: none repeat scroll 0 0 #72698a;
  border: 1px solid #8c84a2;
  color: #FFFFFF;
  margin: 5px 0px 5px 15px;
  padding: 8px 15px;
  border-radius: 7px;
  white-space:nowrap;
  float: left;
}

#facets_bar {
  width: 70%;
  display: inline-block;
  background-color: #f5f5f5;
  border: 1px solid #d7d7d7;
  border-radius: 3px;
  box-shadow: 0px 2px 10px silver;
  padding: 18px 5px;
  margin-bottom: 20px;
}

.fa-times {
 color: #FFFFFF;
 font-size: 1.1em;
}

.fa-times:hover {
  //color: #6510e0;
  color: #FFCC00;
}

/***** Result page (title) *****/
#folio_title {
  font-size: 1.6em;
  margin-top: 40px;
  padding-left: 40px;
}
/***** End of result page (title) *****/

/***** Result page (image frame) *****/
#image_frame {
  text-align: right;
  display: inline-block;
  margin-top: 15px;
}

#location1 {
  float: right;
  height: 400px;
  width: 320px;
  margin: 10px;
}

#image_footer {
  font-size: 1.2em;
}

// Prevent blue line appearing in chrome around the canvas
.openseadragon-canvas {
  outline: 0px;
}

.mag_icon {
  font-size: 1.5em;
  position: relative;
  top: 4px;
}
/***** End of result page (image frame *****/

/***** Result page (form frame) *****/
#form_frame {
  padding-top: 25px;
  padding-left: 40px;
  display: inline-block;
}

/***** Entry menu *****/
#entry_menu {
  height: 26px;
  margin-top: 2px;
  padding: 7px 0px 0px 0px;
}

#entry_menu ul {
  margin: 0px;
  padding: 0px;
}

#entry_menu li {
  float: left;
  font-size: 1.0em;
  list-style: outside none none;
  margin: 0px;
  padding: 4px 2px 2px 0px;
  margin-right: 4px;
}

.highlight {
  //background-color: #403152;
  background-color: #f7f7f7;
  border-bottom: 1px solid #f7f7f7;
  #color: #f3f3f3;
  color: #403152;
  border-radius: 6px 6px 0 0;
  padding: 6px 10px 6px 12px;
  font-weight: bold;
}

.highlight a {
  text-decoration: none;
}

.nohighlight {
  background-color: #C5C5C5;
  border-radius: 6px 6px 0 0;
  padding: 6px 10px 3px 12px;
}

.nohighlight a {
  color: #9b9b9b;
  text-decoration: none;
  font-weight: bold;
}

.nohighlight a:hover {
  color: #403152;
  text-decoration: none;
}

/***** End of entry menu *****/

/***** Form *****/
.tab1 table {
  width: 100%;
  font-size: 0.8em;
  //table-layout: fixed;
  margin: auto;
  border: 1px solid silver;
  //border-collapse: separate;
}

.tab1 th, .tab1 td {
  padding: 5px 10px 5px 10px;
  background-color: #f7f7f7;
  vertical-align: top;
  font-size: 1.3em;
}

.tab1 th {
  font-weight: normal;
  text-align: left;
  vertical-align: top;
  font-size: 1.3em;
  font-style: italic;
  text-align: left;
}

.tab1 .pad_th_person_place {
  padding: 2px 0px 2px 40px;
}

.tab1 .pad_multi_element {
  padding: 2px 0px;
}
/***** End of form *****/
/***** End of result page (form frame) *****/

//.table_border_top {
//  border-top: 1px solid #403152
//}

.table_border_bottom {
  border-bottom: 1px solid silver;
}

/***** index page *****/
.intro-text {
  //font-size: 1.2em;
  font-weight: bold;
  color: #403152
}

.intro {
  //background-color: lightgrey;
  padding: 10px 10px 10px 10px;
  border-radius: 5px;
}

#citation {
  font-size: 0.9em;
  margin-top: 20px;
}

/***** centre the navbar *****/
.navbar-nav {
  width: 100%;
  text-align: center;
  > li {
    float: none;
    display: inline-block;
  }
}

